# sprl_allennlp

./: .allennlp_plugins  .gitignore  allennlp_objective.py  predictions_base.json  pyproject.toml  train.txt
configs/: fg_conll.jsonnet  fg_ner.jsonnet  fg_optuna.jsonnet  fgner_transformer.jsonnet  sprl.jsonnet  train_bert_srl.jsonnet  train_ner.jsonnet  train_sprl.jsonnet
data/: predictions.txt
ent_model/: ent_reader.py  predictor.py
notes/: new  semeval_15.md
sprl/: __init__.py  ent_reader.py  extract_spans.py  lrec20_reader.py  model.py  spaceeval_conll_reader.py  spaceeval_reader.py  spaceeval_to_conll.py  sprl.py  sprl_predictor.py  sprl_scorer.py  test.txt  text.txt  train.txt
templates/: bert_srl_pretrained.md  srl_reader.py
