[tool.poetry]
name = "sprl_allennlp"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
allennlp = "^1.0.0"
pytest = "^5.4.3"
ipython = "^7.16.1"
pandas = "^1.0.5"
pdbpp = "^0.10.2"
xmltodict = "^0.12.0"
allennlp-models = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
