[tool.poetry]
name = "sprl_allennlp"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
allennlp = "^1.0.0"
allennlp-models = "^1.0.0"
pandas = "^1.0.5"
numpy = "^1.19.0"
streamlit = "^0.62.1"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
