[tool.poetry]
name = "sprl_allennlp"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
allennlp-models = "^1.0.0"
allennlp = "^1.0.0"
optuna = "^2.0.0"
ipython = "^7.16.1"
ipdb = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
